# FREEMOUSSE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-macos.yml  ci-linux.yml  ci-macos.yml  quality.yml
assets/: character.glb
cmake/: FindAubio.cmake  FindFFTW3.cmake  FindPortAudio.cmake
include/analysis/: analyzer.hpp  beat_detector.hpp  fft.hpp
include/audio/: audio_capture.hpp  ring_buffer.hpp
include/core/: app.hpp  audio_state.hpp
include/render/: bubble_system.hpp  character.hpp  logo.hpp  renderer.hpp  shader.hpp  skinned_character.hpp
scripts/: build.sh  create_issues.sh  format.sh  install_deps.sh  new_feature.sh  release.sh  setup_github.sh  setup_hooks.sh  tidy.sh
shaders/2d/: bubble.frag  bubble.vert  character.frag  character.vert  logo.frag  logo.vert  spectrum.frag  spectrum.vert
shaders/3d/: skeleton.frag  skeleton.vert  skinned.frag  skinned.vert
src/: main.cpp
src/analysis/: CMakeLists.txt  analyzer.cpp  beat_detector.cpp  fft.cpp
src/audio/: CMakeLists.txt  audio_capture.cpp
src/core/: CMakeLists.txt  app.cpp  shared_audio_state.cpp
src/render/: CMakeLists.txt  bubble_system.cpp  character.cpp  logo.cpp  renderer.cpp  shader.cpp  skinned_character.cpp
